=======
CHANGES
=======

0.2
===

Goal
----

Reduce boilerplate code and simplify architecture

Additions
---------
tinyimg.colors factory for well known colors

Changes
-------
- Extracted common Resource interface for Image and Color classes
- rewritten from scratch Python to C-API bridge
- lazy loading of C-function definitions
- support for logging debug events pystacia logger
- bridge sandboxing of client code from C-API
- Color.get_hsb

Deprecated
----------
- Deprecated pystacia.util.TinyException in favor
  of new name pystacia.util.PystaciaException
- Deprecated importing several symbols from main pystacia module