@@ -2,11 +2,10 @@
 TODO
 ====
 
-- move factory choosing code to a separate function
+- migrate format checking code form get_delegates to get_formats
 - figure out how to do basicConfig
 - instead of relying on renames and get_platfom we could use our own solution [0.1.1]
   if it can be loaded and test for OS and 64bit in setyp.py
-- research auto_level, auto_gamma
 - document splice, implement implode
 - weakrefing cached lena should be only used in tests [0.1.1]
 - investigate __all__ of main module, image and color
