@@ -530,6 +530,15 @@ data =\
              'peak_signal_to_noise_ratio': 6,
              'root_mean_squared_error': 7,
              'undefined': 0}],
+ 'noise': [{'_version': (6, 5, 9, 0),
+            'gaussian': 2,
+            'impulse': 4,
+            'laplacian': 5,
+            'multiplicative_gaussian': 3,
+            'poisson': 6,
+            'random': 7,
+            'undefined': 0,
+            'uniform': 1}],
  'type': [{'_version': (6, 5, 9, 0),
            'bilevel': 1,
            'color_separation': 8,
