@@ -50,12 +50,34 @@ def posterize(image, levels, dither=False):
     c_call(image, 'posterize', levels, dither)
 
 
+def threshold(image, factor, mode):
+    if not mode:
+        mode = 'default'
+    
+    if mode == 'default':
+        factor = (2 ** magick.get_depth() - 1) * factor
+    elif mode == 'random':
+        factor = [(2 ** magick.get_depth() - 1) * f for f in factor]
+    else:
+        factor = color.from_rgb(factor, factor, factor)
+    
+    if mode == 'default':
+        c_call(image, 'threshold', factor)
+    elif mode == 'white':
+        c_call(image, 'white_threshold', factor)
+    elif mode == 'black':
+        c_call(image, 'black_threshold', factor)
+    elif mode == 'random':
+        c_call(image, 'random_threshold', factor[0], factor[1])
+
+
 def convert_colorspace(image, colorspace):
     colorspace = enum_lookup(colorspace, colorspaces)
     c_call(image, ('transform', 'colorspace'), colorspace)
 
 
 from pystacia import magick
+from pystacia import color
 from pystacia.api.func import c_call
 from pystacia.api.enum import lookup as enum_lookup
 from pystacia.image.enum import colorspaces
