@@ -8,3 +8,5 @@ compressions = enum('compression')
 composites = enum('composite')
 axes = enum('axis')
 metrics = enum('metric')
+noises = enum('noise')
+thresholds = enum('threshold')
