@@ -10,6 +10,13 @@ def get_options():
     return options
 
 
+def get_formats():
+    size = c_size_t()
+    formats = c_call('magick_', 'query_formats', '*', size)
+    
+    return [native_str(formats[i]).lower() for i in range(size.value)]
+
+
 from ctypes import c_size_t
 from pystacia.api.func import c_call
 from pystacia.compat import native_str
