@@ -15,8 +15,13 @@ class MagickTest(TestCase):
     def test_version(self):
         self.assertIsInstance(get_version(), (tuple, type(None)))
         self.assertIsInstance(get_version_str(), string_types)
+        
+    def test_formats(self):
+        formats = get_formats()
+        self.assertIn('bmp', formats)
 
 
-from pystacia.magick import get_options, get_version, get_version_str
+from pystacia.magick import (get_options, get_version, get_version_str,
+                            get_formats)
 
 from six import string_types
